--- a/.github/workflows/react-basee-app.yaml
+++ b/.github/workflows/react-basee-app.yaml
@@ -35,7 +35,7 @@ jobs:
     
     # Install Surge
     - name: Install Surge
-      run: npm install --global surge
+      run: npm install -g surge
     
     # Deploy Surge
     - name: Deploy React App to Surge
