--- a/.github/workflows/react-basee-app.yaml
+++ b/.github/workflows/react-basee-app.yaml
@@ -43,4 +43,4 @@ jobs:
     
     # Deploy Surge
     - name: Deploy React App to Surge
-      run: surge ./ React-Base-App-class2.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build React-Base-App-class2.surge.sh --token ${{ secrets.SURGE_TOKEN }}
